# fastVEP

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  README.md
.github/workflows/: ci.yml  pages.yml
analysis/acmg_benchmark/: METHODS.md  clinvar_concordance.py
benchmarks/: download_data.sh  human_chr21.vcf  mouse_chr19.vcf  real_chr22_100k.vcf  real_chr22_10k.vcf  real_chr22_1k.vcf  run_benchmark.sh  zebrafish_chr5.vcf
conda/recipe/: build.sh  meta.yaml
crates/fastvep-annotate/: Cargo.toml
crates/fastvep-annotate/src/: hgvs_normalize.rs  lib.rs
crates/fastvep-cache/src/: fasta.rs  gff.rs  lib.rs  normalize.rs  providers.rs  transcript_cache.rs
crates/fastvep-classification/: Cargo.toml
crates/fastvep-classification/src/: combiner.rs  config.rs  lib.rs  sa_extract.rs  types.rs
crates/fastvep-classification/src/criteria/: benign_standalone.rs  benign_strong.rs  benign_supporting.rs  mod.rs  pathogenic_moderate.rs  pathogenic_strong.rs  pathogenic_supporting.rs  pvs1.rs
crates/fastvep-cli/: Cargo.toml
crates/fastvep-cli/src/: lib.rs  main.rs  pipeline.rs  progress.rs  webserver.rs
crates/fastvep-cli/tests/: cache_synonyms.rs  sa_build_oga.rs  sa_build_streaming.rs
crates/fastvep-core/src/: chrom.rs  lib.rs
crates/fastvep-hgvs/src/: lib.rs  protein.rs
crates/fastvep-io/src/: output.rs  variant.rs  vcf.rs
crates/fastvep-io/tests/: vep_compat.rs
crates/fastvep-sa/examples/: bench_sa_reader.rs  dump_sa.rs  probe_sa.rs
crates/fastvep-sa/src/: block.rs  common.rs  custom.rs  fields.rs  gene.rs  index.rs  interval.rs  reader.rs  reader_v2.rs  writer.rs
crates/fastvep-sa/src/sources/: clinvar.rs  clinvar_protein.rs  cosmic.rs  dbnsfp.rs  dbsnp.rs  gnomad.rs  mitomap.rs  mod.rs  omim.rs  scores.rs  topmed.rs
crates/fastvep-sa/tests/: gnomad_indel_normalization.rs  issue_37_contig_naming.rs
crates/fastvep-web/: Cargo.toml
crates/fastvep-web/src/: context.rs  errors.rs  handlers.rs  main.rs
crates/oxivep-cache/src/: annotation.rs  fasta.rs  gff.rs  lib.rs
crates/oxivep-cli/: Cargo.toml
crates/oxivep-cli/src/: main.rs  pipeline.rs  webserver.rs
crates/oxivep-consequence/: Cargo.toml
crates/oxivep-consequence/src/: predictor.rs
crates/oxivep-core/src/: annotation_types.rs
crates/oxivep-filter/: Cargo.toml
crates/oxivep-genome/src/: transcript.rs
crates/oxivep-hgvs/src/: protein.rs
crates/oxivep-io/: Cargo.toml
crates/oxivep-io/src/: variant.rs  vcf.rs
crates/oxivep-io/tests/: vep_compat.rs
crates/oxivep-web/: Cargo.toml
crates/oxivep-web/src/: context.rs  handlers.rs  main.rs
data/benchmark/: STATUS.md
data/benchmark/output_v7/: MD_REVIEW.md  discrepancies_for_md_review.tsv  opposite_direction.fastvep.vcf  opposite_direction.vcf
data/benchmark/sa_sources/: clingen_gdv_to_oga.py  download_sa_sources.sh
docs/: ACMG.md  ACMG_SETUP.md  SUPPLEMENTARY_ANNOTATIONS.md
manuscript/: manuscript.md
manuscript/data/: code_metrics.csv  format_comparison.csv  giab_benchmark.csv  organism_comparison.csv  resource_usage.csv  scaling.csv  vep_comparison.csv
manuscript/figures/: fig1_architecture.txt  generate_figures.py
scripts/: deploy-clinical.sh  deploy-full.sh
tests/: test_chr1.gff3  test_chr1.vcf
web/: index.html
