[package]
name = "oxivep-consequence"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Consequence prediction engine for OxiVEP (small variants + structural variants)"

[dependencies]
oxivep-core = { workspace = true }
oxivep-genome = { workspace = true }
log = { workspace = true }
